app_deployment_testing/ingress-entry-development.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: enter-ingress-development
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
     paths:
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-green-svc
            port:
              number: 80
