app_deployment_testing/ingress-entry-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: enter-ingress-monitoring
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
     paths:
      - path: /mon
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 8080
